--- a/input.html
+++ b/input.html
@@ -8,13 +8,31 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/var.css">
-    <link rel="stylesheet" href="./css/btn.css">
     <link rel="stylesheet" href="./css/input.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Hello, world!</title>
+    <title>Form controls</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <h3>Form controls</h3>
+        <a href="https://getbootstrap.com/docs/5.1/forms/form-control/" class="d-block mb-3" target="_blank">Bootstrap</a>
+        <div class="col-12">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+        </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
